[gd_scene load_steps=2 format=3 uid="uid://ba8o1td4sf6sm"]

[ext_resource type="Script" path="res://scenes/Menus/new_game.gd" id="1_6yshf"]

[node name="New Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6yshf")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Mode Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Easy Mode" type="Button" parent="Mode Options"]
layout_mode = 2
text = "Easy Mode"

[node name="Medium Mode" type="Button" parent="Mode Options"]
layout_mode = 2
text = "Medium Mode"

[node name="Hard Mode" type="Button" parent="Mode Options"]
layout_mode = 2
text = "Hard Mode"

[connection signal="pressed" from="Mode Options/Easy Mode" to="." method="_on_easy_mode_pressed"]
[connection signal="pressed" from="Mode Options/Medium Mode" to="." method="_on_medium_mode_pressed"]
[connection signal="pressed" from="Mode Options/Hard Mode" to="." method="_on_hard_mode_pressed"]
